  Meir Kriheli.

* docutils/parsers/rst/languages/he.py: Added to project: Hebrew 
  mappings by Meir Kriheli.

* docutils/frontend.py:

  - Configuration files are now assumed and required to be
    UTF-8-encoded.
  - Paths of applied configuration files are now recorded in the
    runtime setting ``_config_files`` (accessible via
    ``--dump-settings``).

* docutils/io.py:

  - Added code to determine the input encoding from data: encoding
    declarations or the presence of byte order marks (UTF-8 & UTF-16).
  - Added support for IronPython 1.0.

* docutils/nodes.py:

  - Added ``document.__getstate__`` method, for pickling.

* docutils/parsers/rst/states.py:

  - Unquoted targets beginning with an underscore (``.. __target:
    URI``) are no longer accepted.
  - Added support for multiple attributions in a physical block quote
    (indented text block), dividing it into multiple logical block
    quotes.
  - Added support for unicode bullets in bullet lists: "•", "‣", and
    "⁃".
  - Added support for new object-oriented directive interface,
    retaining compatibility to the old functional interface.
  - Added support for throwing ``DirectiveError``'s from within
    directive code.

* docutils/parsers/rst/__init__.py:

  - Added ``Directive`` base class.
  - Added ``DirectiveError`` base class.
  - Fixed ``file_insertion_enabled`` & ``raw_enabled`` setting
    definitions.

* docutils/parsers/directives/:

  - Refactored all reStructuredText directives to use the new
    object-oriented directive interface.  Errors are now (mostly)
    thrown using the new ``DirectiveError`` class.

* docutils/transforms/writer_aux/:

  - Added ``Admonitions`` transform to transform specific admonitions
    (like ``note``, ``warning``, etc.) into generic admonitions with a
    localized title.

* docutils/writers/html4css1/__init__.py:

  - Moved template functionality from the PEP/HTML writer here.
  - Expanded the fragments available in the ``parts`` attribute.