@@ -400,11 +400,23 @@ _`strict_visitor`
     Default: disabled (None).  Option: ``--strict-visitor`` (hidden,
     for development use only).
 
+_`strip_classes`
+    List of "classes" attribute values to remove from all elements in
+    the document tree.
+
+    Default: disabled (None).  Option: ``--strip-class``.
+
 _`strip_comments`
     Enable the removal of comment elements from the document tree.
 
     Default: disabled (None).  Options: ``--strip-comment``,
     ``--leave-comments``.
+
+_`strip_elements_with_classes`
+    List of "classes" attribute values; matching elements to be
+    removed from the document tree.
+
+    Default: disabled (None).  Option: ``--strip-element-with-class``.
 
 _`title`
     The document title as metadata, which does not become part of the
